1994-11-13  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.c: corrected logic that supports -sz, -sZ options

	* src/ftree.c:
	fixes for the special case when I create a leaf directory _before_ the RCS
	leaf (wasn't initializing the NOSCCS flags, etc.)

	* src/ded2s.c: use MODULE_ID

	* src/ded2s.c: use function 'in_group()'

1994-10-19  Thomas E. Dickey  <dickey@clark.net>

	* src/dedview.c:
	corrected a limit-check for very long colored filenames

1994-10-17  Thomas E. Dickey  <dickey@clark.net>

	* src/dedcolor.c: compiler warning: uninitialized variable 'found'

	* src/dedcolor.c: use MODULE_ID

1994-10-16  Thomas E. Dickey  <dickey@clark.net>

	* src/dedring.c:
	supplied a missing abspath for 'E' operation, that caused an extra ring-entry
	to be inserted when following a relative symbolic link.

1994-10-06  Thomas E. Dickey  <dickey@clark.net>

	* src/dedscan.c: oops: used wrong filename-arg for purge_cmv_dir

1994-10-05  Thomas E. Dickey  <dickey@clark.net>

	* src/ded2s.c:
	used 'getgroups()' to construct a more accurate executable-access test.
	also corrected root's handling of the permission bits

	* src/dedscan.c:
	moved the code to reset the CmVision directory-state to just before trying
	to get the lock-status.

	* src/history.c: simplified the repeat-count for show-history

	* src/history.c: use MODULE_ID

1994-09-28  Thomas E. Dickey  <dickey@clark.net>

	* src/dedscan.c:
	invoke code to purge CmVision directory info when (re)scanning a directory

1994-09-27  Thomas E. Dickey  <dickey@clark.net>

	* src/dedscan.c: moved some code into td_lib's cm-functions

	* src/ded.c:
	renamed editfile to run_editor, to avoid conflict with file merged from
	portunix library

1994-08-15  Thomas E. Dickey  <dickey@clark.net>

	* src/dedscan.c: split out 'lastrev()'

1994-08-12  Thomas E. Dickey  <dickey@clark.net>

	* src/ftree.c, src/ded.c, src/dedscan.c, src/dedview.c, src/boxchars.c:
	lint:SunOS

	* src/boxchars.c: use MODULE_ID
